# daany

./: .gitignore  CONTRIBUTING.md  Daany.DataFrame.Ext.nuspec  Daany.DataFrame.nuspec  Daany.LinA-linux-x64.nuspec  Daany.LinA-win-x64.nuspec  Daany.LinA.linux-x64.nuspec  Daany.LinA.nuspec  Daany.LinA.win-x64.nuspec  Daany.LinA.win-x64_v2.nuspec  Daany.Stat.nuspec  LICENSE  NuGet.config  README.MD  README.md  azure-pipelines.yml  build_daany_sln.ps1  build_publish_daany_sln.ps1  daany.linux.sln  daany.sln  nuget commands.txt
docs/: 01create_data_frame.md  02data_frame_indexers.md  03data_frame_save_csv.md  (+9 more)
src/daany_rust/: Cargo.toml
src/daany_rust/rust_lib/x86_64-pc-windows-msvc/release/: daany_rust_bin.d  daany_rust_lib.d  daany_rust_lib.dll.lib
src/daany_rust/rust_lib/x86_64-pc-windows-msvc/release/.fingerprint/chrono-6399c391c25b8c2c/: lib-chrono  lib-chrono.json
src/daany_rust/rust_lib/x86_64-pc-windows-msvc/release/.fingerprint/csv-core-9814a32190462846/: lib-csv_core  lib-csv_core.json
src/daany_rust/rust_lib/x86_64-pc-windows-msvc/release/.fingerprint/csv-d2e34c81ef4a6169/: lib-csv  lib-csv.json
src/daany_rust/rust_lib/x86_64-pc-windows-msvc/release/.fingerprint/daany_rust-2c818976743d97fd/: bin-daany_rust_bin  bin-daany_rust_bin.json  dep-bin-daany_rust_bin  dep-lib-daany_rust_lib  lib-daany_rust_lib  lib-daany_rust_lib.json  output-bin-daany_rust_bin  output-lib-daany_rust_lib
src/daany_rust/rust_lib/x86_64-unknown-linux-gnu/release/: daany_rust_bin  daany_rust_bin.d  libdaany_rust_lib.d
src/daany_rust/src/: daany_csv.rs  lib.rs  main.rs
(+411 files in other folders)
